margin buttons align on img aside for 390px, fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -761,7 +761,7 @@ input[type='color']::-webkit-color-swatch {
     #button_align_left,
     #button_align_center,
     #button_align_right{    
-        width: 50px;
+        width: 43px;
     }
 
     #font_colours,
